k8s-manifests/eva-web/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eva-web-dev
  labels:
    environment: development
