k8s-manifests/eva-web/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eva-web
spec:
  rules:
  - host: wwwint.ebi.ac.uk
    http:
      paths:
      - path: /eva
        pathType: Prefix
        backend:
          service:
            name: eva-web
            port:
              number: 8080
